Hystrix DashBoard and Hystrix Turbine

--- a/service-panda/src/main/resources/application.yml
+++ b/service-panda/src/main/resources/application.yml
@@ -9,3 +9,21 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://peer1:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
+
+turbine:
+  app-config: service-panda,service-monkey
+  aggregator:
+    clusterConfig: default
+  clusterNameExpression: new String("default")
+  combine-host: true
+  instanceUrlSuffix:
+    default: actuator/hystrix.stream
